# sisWebBackend

./: manage.py  pyproject.toml  requirements.txt
core/: asgi.py  settings.py  urls.py  wsgi.py
crud/: models.py  scheduler.py  serializer.py  urls.py  views.py
crud/migrations/: 0001_initial.py  0002_alter_fichatecnica_tour.py  0002_alter_tour_lastaccessuser.py  0003_alter_notification_message.py  0004_tour_ppe_tour_pve.py  0005_tour_figma_boleto_guiado_hotel_fichatecnicahotel_and_more.py  0006_rename_precionino_tren_precioninio.py  0007_hotel_drive_restaurante_drive_tour_drive.py  0008_tour_currentuser_tour_lastmodify.py  0009_boleto_currentuser_boleto_lastmodify_and_more.py  0010_rename_estudiantee_boleto_adultoe_and_more.py  0011_remove_fichatecnicahotel_hotel_and_more.py  0012_alter_boleto_lastmodify_alter_guiado_lastmodify_and_more.py  0013_rename_ppe_tour_pne_rename_ppp_tour_pnp_and_more.py
drfauth/: adapters.py  admin.py  apps.py  backends.py  managers.py  models.py  serializer.py  serializers.py  urls.py  views.py
drfauth/migrations/: 0001_initial.py  0002_alter_customuser_date_joined.py  0003_alter_customuser_date_joined.py  0004_alter_customuser_date_joined.py  0005_alter_customuser_date_joined.py  0006_alter_customuser_date_joined.py  0007_alter_customuser_date_joined.py  0008_alter_customuser_date_joined.py  0009_alter_customuser_date_joined.py  0010_alter_customuser_date_joined.py  0011_alter_customuser_date_joined.py  0012_alter_customuser_date_joined.py  0013_alter_customuser_date_joined.py  (+16 more)
staticfiles/: staticfiles.json
